--- a/work-files/index.html
+++ b/work-files/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row" style="max-height: 100px; background-color: white;">
                 <div class="col-lg-4 col-md-6 col-sm-6 position-relative">
-                    <div class="navbar navbar-expand-lg">
+                    <div class="navbar navbar-expand-lg pt-3">
                         <img src="../asset/rao" alt="" id="logo-img" class="img-fluid navbar-brand">
                         <a href="" class="navbar-brand" id="logo-name">Rao information <span> technology</span> </a>
                     </div>
@@ -36,8 +36,8 @@
             <img src="../asset/Homepage" alt="Homepage image" style="width: 100%;height: 38rem;">
         </div>
         <div class="row position-relative">
-            <div class="col-lg-7 col-md-6 col-sm-7 my-3">
-                <h1 class="text-center">OUR SERVCES</h1>
+            <div class="col-lg-7 col-md-6 col-sm-7 " style="margin: 70px 0px;">
+                <h1 class="text-center" style="color: #497375; margin-top: 30px;">OUR SERVCES</h1>
                 <div class="block">
                     <div class="card" style="max-width: 100%;border:none;">
                         <div class="card-body d-flex align-items-center justify-content-around">
@@ -89,11 +89,35 @@
             </div>
             <div class="col-lg-5 col-md-6 col-sm-5">
                 <div class="block-1">
-
+                    <div class="sub-block">
+                        <h4 class="text-light">About Us</h4>
+                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo quam
+                            sit deserunt eum,
+                            laudantium quos consequatur, saepe, optio culpa voluptatem! Saepe tenetur commodi quos unde
+                            laudantium! Facilis, deserunt a.</p>
+                    </div>
+                </div>
+                <div class="block-1">
+                    <div class="sub-block">
+                        <h4 class="text-light">Contact Us</h4>
+                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo quam
+                            sit deserunt eum,
+                        </p>
+                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo quam
+                            sit deserunt eum,
+                        </p>
+                    </div>
+                </div>
+                <div class="block-1">
+                    <div class="sub-block">
+                        <a href="" class="text">www.google.com</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+    </footer>
     <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
