--- a/work-files/index.html
+++ b/work-files/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
-<body> 
+<body>
     <div class="container-fluid">
         <div class="container">
-            <div class="row" style="max-height: 100px; background-color: white;">
+            <div class="row" id="navbar" >
                 <div class="col-lg-4 col-md-6 col-sm-6 position-relative">
                     <div class="navbar navbar-expand-lg pt-3">
                         <img src="../asset/rao" alt="" id="logo-img" class="img-fluid navbar-brand">
@@ -29,24 +29,23 @@
                 </div>
             </div>
         </div>
-        <div class="position-relative" style="top: 0px;  
-        z-index: -1;
-        width: 83rem;
-        height: 100%;">
-            <img src="../asset/Homepage" alt="Homepage image" style="width: 100%;height: 38rem;">
+        <div class="position-relative" style="top: 0px;z-index: -1;height: 100%;">
+            <img src="../asset/Homepage" alt="Homepage image" id="img-home" style="" class="img-fluid">
         </div>
-        <div class="row position-relative">
-            <div class="col-lg-7 col-md-6 col-sm-7 " style="margin: 70px 0px;">
+        <div class="row position-relative" id="main-section">
+            <div class="col-lg-7 col-md-6 col-sm-12  " style="margin: 70px 0px;">
                 <h1 class="text-center" style="color: #497375; margin-top: 30px;">OUR SERVCES</h1>
                 <div class="block">
                     <div class="card" style="max-width: 100%;border:none;">
                         <div class="card-body d-flex align-items-center justify-content-around">
                             <h5 class="card-title" style="font-size: 100px;color: #d06444;">01</h5>
                             <div class="mx-4">
-                                <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME</h6>
+                                <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME
+                                </h6>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
                                     molestias dolore at quidem. Eos architecto dicta voluptatibus minima praesentium
-                                    quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum ex!Lorem
+                                    quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum
+                                    ex!Lorem
                                 </p>
 
                             </div>
@@ -54,15 +53,16 @@
                     </div>
                 </div>
                 <div class="block">
-
                     <div class="card" style="max-width: 100%;border:none;">
                         <div class="card-body d-flex align-items-center justify-content-around">
                             <h5 class="card-title" style="font-size: 100px;color: #d06444;">02</h5>
                             <div class="mx-4">
-                                <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME</h6>
+                                <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME
+                                </h6>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
                                     molestias dolore at quidem. Eos architecto dicta voluptatibus minima praesentium
-                                    quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum ex!Lorem
+                                    quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum
+                                    ex!Lorem
                                 </p>
 
                             </div>
@@ -75,10 +75,12 @@
                         <div class="card-body d-flex align-items-center justify-content-around">
                             <h5 class="card-title" style="font-size: 100px;color: #d06444;">03</h5>
                             <div class="mx-4">
-                                <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME</h6>
+                                <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME
+                                </h6>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
                                     molestias dolore at quidem. Eos architecto dicta voluptatibus minima praesentium
-                                    quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum ex!Lorem
+                                    quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum
+                                    ex!Lorem
                                 </p>
 
                             </div>
@@ -87,23 +89,27 @@
                 </div>
 
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-5">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <div class="block-1">
                     <div class="sub-block">
                         <h4 class="text-light">About Us</h4>
-                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo quam
+                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo
+                            quam
                             sit deserunt eum,
-                            laudantium quos consequatur, saepe, optio culpa voluptatem! Saepe tenetur commodi quos unde
+                            laudantium quos consequatur, saepe, optio culpa voluptatem! Saepe tenetur commodi quos
+                            unde
                             laudantium! Facilis, deserunt a.</p>
                     </div>
                 </div>
                 <div class="block-1">
                     <div class="sub-block">
                         <h4 class="text-light">Contact Us</h4>
-                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo quam
+                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo
+                            quam
                             sit deserunt eum,
                         </p>
-                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo quam
+                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut explicabo
+                            quam
                             sit deserunt eum,
                         </p>
                     </div>
@@ -115,11 +121,10 @@
                 </div>
             </div>
         </div>
-    </div>
-    <footer>
-    </footer>
-    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../bootstrap/js/bootstrap.min.js"></script>
+        <footer>
+        </footer>
+        <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
