--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row" id="navbar" >
                 <div class="col-lg-4 col-md-6 col-sm-6 position-relative">
                     <div class="navbar navbar-expand-lg pt-3">
-                        <img src="../asset/rao" alt="" id="logo-img" class="img-fluid navbar-brand">
+                        <img src="./asset/rao" alt="" id="logo-img" class="img-fluid navbar-brand">
                         <a href="" class="navbar-brand" id="logo-name">Rao information <span> technology</span> </a>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="position-relative" style="top: 0px;z-index: -1;height: 100%;">
-            <img src="../asset/Homepage" alt="Homepage image" id="img-home" style="" class="img-fluid">
+            <img src="./asset/Homepage" alt="Homepage image" id="img-home" style="" class="img-fluid">
         </div>
         <div class="row position-relative" id="main-section">
             <div class="col-lg-7 col-md-6 col-sm-12  " style="margin: 70px 0px;">
