--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 </head>
 
 <body>
+
     <div class="container-fluid">
         <div class="container">
-            <div class="row" id="navbar" >
+            <div class="row" id="navbar">
+
                 <div class="col-lg-4 col-md-6 col-sm-6 position-relative">
                     <div class="navbar navbar-expand-lg pt-3">
-                        <img src="./asset/rao" alt="" id="logo-img" class="img-fluid navbar-brand">
-                        <a href="" class="navbar-brand" id="logo-name">Rao information <span> technology</span> </a>
+                        <div id="logo" class="position-relative">
+                            <div class="logo-img"></div>
+                            <div class="logo-img"></div>
+                        </div>
+                        <a href="" class="navbar-brand" id="logo-name">COMPANY<span> NAME</span> </a>
                     </div>
                 </div>
+
                 <div class="col-lg-8 col-md-6 col-sm-6 position-relative"
                     style="max-width: 100%; display: flex; justify-content: flex-end;">
                     <div class="box" id="navbar-layout">
@@ -29,15 +35,29 @@
                 </div>
             </div>
         </div>
+
+
+
         <div class="position-relative" style="top: 0px;z-index: -1;height: 100%;">
-            <img src="./asset/Homepage" alt="Homepage image" id="img-home" style="" class="img-fluid">
+            <img src="./asset/Homepage" alt="Homepage image" id="img-home" class="img-fluid">
         </div>
+
+
+
+
+
+
+
+
+
+
         <div class="row position-relative" id="main-section">
-            <div class="col-lg-7 col-md-6 col-sm-12  " style="margin: 70px 0px;">
+            <div class="col-xl-8 col-lg-7 col-md-6 col-sm-12 px-5" style="margin: 70px 0px;">
                 <h1 class="text-center" style="color: #497375; margin-top: 30px;">OUR SERVCES</h1>
+
                 <div class="block">
                     <div class="card" style="max-width: 100%;border:none;">
-                        <div class="card-body d-flex align-items-center justify-content-around">
+                        <div class="card-body d-flex align-items-center justify-content-around" id="card">
                             <h5 class="card-title" style="font-size: 100px;color: #d06444;">01</h5>
                             <div class="mx-4">
                                 <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME
@@ -45,16 +65,21 @@
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
                                     molestias dolore at quidem. Eos architecto dicta voluptatibus minima praesentium
                                     quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum
-                                    ex!Lorem
+                                    ex!Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
+                                    laborum ducimus neque! Suscipit doloribus exercitationem quidem magnam odio quos
+                                    dolorem! At, dignissimos. Corrupti deleniti dicta commodi architecto suscipit
+                                    veritatis consequuntur!
                                 </p>
 
                             </div>
                         </div>
                     </div>
                 </div>
+
+
                 <div class="block">
                     <div class="card" style="max-width: 100%;border:none;">
-                        <div class="card-body d-flex align-items-center justify-content-around">
+                        <div class="card-body d-flex align-items-center justify-content-around" id="card">
                             <h5 class="card-title" style="font-size: 100px;color: #d06444;">02</h5>
                             <div class="mx-4">
                                 <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME
@@ -62,25 +87,31 @@
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
                                     molestias dolore at quidem. Eos architecto dicta voluptatibus minima praesentium
                                     quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum
-                                    ex!Lorem
+                                    ex!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque suscipit
+                                    asperiores officiis, vero, reiciendis doloremque illum repellat hic impedit
+                                    molestias non similique possimus eum numquam perferendis cumque. Ut, suscipit cum?
                                 </p>
 
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="block">
 
+
+                <div class="block">
                     <div class="card" style="max-width: 100%;border:none;">
-                        <div class="card-body d-flex align-items-center justify-content-around">
-                            <h5 class="card-title" style="font-size: 100px;color: #d06444;">03</h5>
+                        <div class="card-body d-flex align-items-center justify-content-around" id="card">
+                            <h5 class="card-title" style="font-size: 100px;color: #d06444; margin: 10px 0px;">03</h5>
                             <div class="mx-4">
                                 <h6 class="card-subtitle" style="color: #497375; font-weight: 900;">SERVICES NAME
                                 </h6>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
                                     molestias dolore at quidem. Eos architecto dicta voluptatibus minima praesentium
                                     quo, exercitationem adipisci aut amet incidunt labore ea eligendi laborum
-                                    ex!Lorem
+                                    ex!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea
+                                    reprehenderit quis earum nisi, voluptatibus odio perspiciatis quod laborum
+                                    aspernatur repellat iste expedita quo beatae voluptas accusantium perferendis, nam
+                                    nemo.
                                 </p>
 
                             </div>
@@ -89,7 +120,9 @@
                 </div>
 
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-12">
+            <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12">
+
+
                 <div class="block-1">
                     <div class="sub-block">
                         <h4 class="text-light">About Us</h4>
@@ -101,6 +134,7 @@
                             laudantium! Facilis, deserunt a.</p>
                     </div>
                 </div>
+
                 <div class="block-1">
                     <div class="sub-block">
                         <h4 class="text-light">Contact Us</h4>
@@ -114,6 +148,7 @@
                         </p>
                     </div>
                 </div>
+
                 <div class="block-1">
                     <div class="sub-block">
                         <a href="" class="text">www.google.com</a>
@@ -121,8 +156,12 @@
                 </div>
             </div>
         </div>
+
+
         <footer>
         </footer>
+
+
         <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
